--- a/EClothing.Auth/Views/Account/Login.cshtml
+++ b/EClothing.Auth/Views/Account/Login.cshtml
@@ -1,4 +1,5 @@
-﻿@model LoginViewModel
+﻿@model LoginViewModel;
+
 
 <div class="login-page">
     <div class="page-header">
@@ -6,6 +7,8 @@
     </div>
 
     <partial name="_ValidationSummary" />
+
+    
 
     <div class="row">
 
@@ -54,6 +57,20 @@
                 </div>
             </div>
         }
+
+        <div class="col-md-6 col-sm-6 external-providers">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        @* <a href="Register?@Model.ReturnUrl">Criar Conta</a> *@
+                        @Html.ActionLink("Criar Conta", "Register", "Account", new{returnUrl = Model.ReturnUrl } , null)
+                    </div>
+                   
+                </div>
+            </div>
+        
+
+        
+    
 
         @if (Model.VisibleExternalProviders.Any())
         {
