--- a/EClothing.Auth/Views/_ViewImports.cshtml
+++ b/EClothing.Auth/Views/_ViewImports.cshtml
@@ -1,2 +1,4 @@
 ﻿@using IdentityServer4.Quickstart.UI
+@using EClothing.Auth.Models.ViewModels
+@using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
