--- a/EClothing.Auth/Views/Account/Login.cshtml
+++ b/EClothing.Auth/Views/Account/Login.cshtml
@@ -26,8 +26,8 @@
 
                             <fieldset>
                                 <div class="form-group">
-                                    <label asp-for="Username"></label>
-                                    <input class="form-control" placeholder="Username" asp-for="Username" autofocus>
+                                    <label asp-for="EmailAdress"></label>
+                                    <input class="form-control" placeholder="EmailAdress" asp-for="EmailAdress" autofocus>
                                 </div>
                                 <div class="form-group">
                                     <label asp-for="Password"></label>
